--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -12,7 +12,7 @@ $header-bg: transparent;
   border: 1px dotted red;
 }
 
-$transition-default: 0.2s;
+$transition-default: 0.1s;
 @mixin transition($time) {
   -webkit-transition: all $time ease;
   -moz-transition: all $time ease;
